Do angle host integration via JAWT